RESOLVED FIXED291211
Regression(293232@main) imported/w3c/web-platform-tests/webrtc-encoded-transform/script-write-twice-transform.https.html is crashing in debug
https://bugs.webkit.org/show_bug.cgi?id=291211
Summary Regression(293232@main) imported/w3c/web-platform-tests/webrtc-encoded-transf...
Chris Dumez
Reported 2025-04-07 11:32:07 PDT
imported/w3c/web-platform-tests/webrtc-encoded-transform/script-write-twice-transform.https.html is crashing in debug since 293232@main: ``` Thread 10 Crashed:: WebCore: Worker 0 WebCore 0x300002bf0 WTFCrashWithInfo(int, char const*, char const*, int) + 100 (Assertions.h:920) 1 WebCore 0x3037be120 WebCore::RTCEncodedFrame::rtcFrame(JSC::VM&, WebCore::RTCEncodedFrame::ShouldNeuter) + 148 (RTCEncodedFrame.cpp:62) 2 WebCore 0x303827e94 _ZZZN7WebCore23RTCRtpScriptTransformer8writableEvENK3$_0clINS_22ScriptExecutionContextEN3JSC7JSValueEEENS_11ExceptionOrIvEERT_T0_ENKUlRN3WTF6RefPtrINS_20RTCEncodedVideoFrameENSB_12RawPtrTraitsISD_EENSB_21DefaultRefDerefTraitsISD_EEEEE_clESJ_ + 88 (RTCRtpScriptTransformer.cpp:113) 3 WebCore 0x303827c14 _ZN3WTF15visitOneVariantILm0ENS_7VisitorIZZN7WebCore23RTCRtpScriptTransformer8writableEvENK3$_0clINS2_22ScriptExecutionContextEN3JSC7JSValueEEENS2_11ExceptionOrIvEERT_T0_EUlRNS_6RefPtrINS2_20RTCEncodedAudioFrameENS_12RawPtrTraitsISF_EENS_21DefaultRefDerefTraitsISF_EEEEE_JZZNS3_8writableEvENKS5_IS6_S8_EESA_SC_SD_EUlRNSE_INS2_20RTCEncodedVideoFrameENSG_ISN_EENSI_ISN_EEEEE_EEERNSt3__17variantIJSK_SQ_EEEEEDcOSD_OT1_ + 172 (StdLibExtras.h:611) 4 WebCore 0x303824c8c _ZN3WTF8switchOnIRNSt3__17variantIJNS_6RefPtrIN7WebCore20RTCEncodedAudioFrameENS_12RawPtrTraitsIS5_EENS_21DefaultRefDerefTraitsIS5_EEEENS3_INS4_20RTCEncodedVideoFrameENS6_ISB_EENS8_ISB_EEEEEEEJZZNS4_23RTCRtpScriptTransformer8writableEvENK3$_0clINS4_22ScriptExecutionContextEN3JSC7JSValueEEENS4_11ExceptionOrIvEERT_T0_EUlRSA_E_ZZNSH_8writableEvENKSJ_ISK_SM_EESO_SQ_SR_EUlRSE_E_EEEDTcl15visitOneVariantcl11makeVisitorspclsr3stdE7forwardIT0_Efp0_EEcl9asVariantclsr3stdE7forwardISP_Efp_EEEEOSP_DpOSW_ + 112 (StdLibExtras.h:619) 5 WebCore 0x3038247b8 _ZZN7WebCore23RTCRtpScriptTransformer8writableEvENK3$_0clINS_22ScriptExecutionContextEN3JSC7JSValueEEENS_11ExceptionOrIvEERT_T0_ + 436 (RTCRtpScriptTransformer.cpp:110) 6 WebCore 0x303824564 WTF::Detail::CallableWrapper<WebCore::RTCRtpScriptTransformer::writable()::$_0, WebCore::ExceptionOr<void>, WebCore::ScriptExecutionContext&, JSC::JSValue>::call(WebCore::ScriptExecutionContext&, JSC::JSValue) + 64 (Function.h:53) 7 WebCore 0x30380b2dc WTF::Function<WebCore::ExceptionOr<void> (WebCore::ScriptExecutionContext&, JSC::JSValue)>::operator()(WebCore::ScriptExecutionContext&, JSC::JSValue) const + 220 (Function.h:82) 8 WebCore 0x30380aee8 WebCore::SimpleWritableStreamSink::write(WebCore::ScriptExecutionContext&, JSC::JSValue, WebCore::DOMPromiseDeferred<void>&&) + 76 (WritableStreamSink.h:72) 9 WebCore 0x302b4f9c4 WebCore::jsWritableStreamSinkPrototypeFunction_writeBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSWritableStreamSink*, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise>, WTF::DefaultRefDerefTraits<WebCore::DeferredPromise>>&&)::'lambda'()::operator()() const + 136 (JSWritableStreamSink.cpp:152) ```
Attachments
Chris Dumez
Comment 1 2025-04-07 11:32:39 PDT
Chris Dumez
Comment 2 2025-04-07 11:35:10 PDT
EWS
Comment 3 2025-04-07 15:16:53 PDT
Committed 293382@main (3babcf544dfe): <https://commits.webkit.org/293382@main> Reviewed commits have been landed. Closing PR #43752 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.