Regression(293232@main) imported/w3c/web-platform-tests/webrtc-encoded-transform/script-write-twice-transform.https.html is crashing in debug https://bugs.webkit.org/show_bug.cgi?id=291211 rdar://148713897

Reviewed by Eric Carlson.

It appears `RTCEncodedFrame::rtcFrame()` can be called when `m_isNeutered` has already
been set, thus hitting the `ASSERT(!m_isNeutered)` assertion. Instead of asserting,
deal at runtime with the frame having already been neutered.

* Source/WebCore/Modules/mediastream/RTCEncodedFrame.cpp:
(WebCore::RTCEncodedFrame::rtcFrame):

Canonical link: https://commits.webkit.org/293382@main